# haskell-mega-repo

./: .dockerignore  .gitignore  .gitmodules  .mega-repo-tool.yaml  .stylish-haskell.yaml  .travis.meta.yml  .travis.yml  README.md  build-in-docker.sh  build-in-linux.sh  log-papertrail.cabal  mega-repo-tool.yaml  run-planmill-integration-test.sh  stack-ghc-8.0.2.yaml  stack-ghc-8.0.yaml  stack-lts-2.yaml  stack-lts-3.yaml  stack-lts-4.yaml  stack-lts-5.yaml  stack-lts-6.yaml  stack.yaml  tajna.yaml  upload-docs.sh
avar/: README.md  avar.cabal  package.yaml
avatar-app/: Dockerfile  README.md  avatar-app.cabal  package.yaml
checklist-app/: README.md  checklist-app.cabal  checklist.js  data.sample.yaml  package.yaml  schema.sql
contacts-api/: Dockerfile  README.md  contacts-api.cabal  contacts.cabal  package.yaml
dynmap-cache/: README.md  dynmap-cache.cabal  package.yaml
email-proxy/: README.md  email-proxy.cabal  package.yaml
env-config/: env-config.cabal  package.yaml
favicon-app/: Dockerfile  README.md  favicon-app.cabal  favicon.cabal  package.yaml
flowdock-cli/: README.md  flowdock-cli.cabal  package.yaml
fum-carbon-app/: README.md  fum-carbon-app.cabal  fum-carbon.js  futu.js  lomake.js  package.yaml  schema.sql
fum-client/: README.md  fum-client.cabal  package.yaml
futucli/: README.md  futucli.cabal  package.yaml
futuhours-api/: README.md  futuhours-api.cabal  package.yaml
futuhours-mock/: futuhours-mock.cabal  package.yaml
futulogo/: futu-favicon-template.psd  (+2 more)
optparse-sop/: optparse-sop.cabal
optparse-sop/src/Options/: SOP.hs
(+546 files in other folders)
