name:                optparse-sop
version:             0
synopsis:            Very quick generic options-applicative
description:        
  For very quick command based clients
  .
  @
  data Cmd = CmdFoo | CmdBar Int
  deriveGeneric ''Cmd

  main :: IO ()
  main = execParser opts >>= runCmd
    where
      opts = info (helper <*> sopCommandParser) mempty
  @
homepage:            https://github.com/futurice/haskell-mega-repo
bug-reports:         https://github.com/futurice/haskell-mega-repo/issues
license:             BSD3
license-file:        LICENSE
author:              Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:          Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:           (c) 2017 Futurice
category:            System
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/futurice/haskell-mega-repo

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:
    Options.SOP
  default-extensions:
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    ScopedTypeVariables
  build-depends:
    base >=4.8 && <4.10,
    ansi-pretty,
    futurice-prelude,
    generics-sop,
    generics-sop-lens,
    intervals,
    lens,
    optparse-applicative,
    split,
    time-parsers,
    trifecta
